@@ -39,6 +39,7 @@
  + New atlas format: Sports Tracker
  + New map source: OSM Hikebikemap.de
  + Background color for custom maps added
+ ~ Freemap.sk maps updated and changed
 
  1.7: (2010-02-05)
  ~ Project has been renamed to "Mobile Atlas Creator" taking account that
